# vptr_demo

./: CMakeLists.txt  README.md
include/: circle.h  shape.h  square.h
src/: circle.c  main.c  shape.c  square.c
